Bug 346951 - KWalletManager5 is not co-installable with KWalletManager
Summary: KWalletManager5 is not co-installable with KWalletManager
Status: RESOLVED FIXED
Alias: None
Product: kwalletmanager
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Valentin Rusu
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-04-30 11:48 UTC by Jan Grulich
Modified: 2015-05-01 13:28 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jan Grulich 2015-04-30 11:48:00 UTC
I'm trying to package kwalletmanager5 to Fedora, because without it there is no way how to manage your secrets stored in kwallet5 or how to configure it. Problem is that there are few files which are still in conflict with the old kwalletmanager.

See:
file /usr/share/dbus-1/system-services/org.kde.kcontrol.kcmkwallet.service from install of kwalletmanager5-15.04.0-1.20150404git.fc22.x86_64 conflicts with file from package kwalletmanager-15.04.0-1.fc22.x86_64
file /usr/share/polkit-1/actions/org.kde.kcontrol.kcmkwallet.policy from install of kwalletmanager5-15.04.0-1.20150404git.fc22.x86_64 conflicts with file from package kwalletmanager-15.04.0-1.fc22.x86_64
file /usr/share/doc/HTML/en/kwallet/index.cache.bz2 from install of kwalletmanager5-15.04.0-1.20150404git.fc22.x86_64 conflicts with file from package kwalletmanager-15.04.0-1.fc22.x86_64
file /usr/share/doc/HTML/en/kwallet/index.docbook from install of kwalletmanager5-15.04.0-1.20150404git.fc22.x86_64 conflicts with file from package kwalletmanager-15.04.0-1.fc22.x86_64

Files under "/usr/share/doc/" could go into kwalletmanager5-doc subpackage, which would be in conflict with kwalletmanager, but what about other files? I think this should be solved in upstream rather than on our side so each distribution doesn't need to patch kwalletmanager5 to make it co-installable with the old kwalletmanager.

According to https://barlog.rusu.info/valentin/blog/?p=395 I was expecting it fully co-installable.

Reproducible: Always
Comment 1 Valentin Rusu 2015-05-01 12:42:20 UTC
Git commit bd78050904ce91f134b1f0bde93ed9512613e15f by Valentin Rusu.
Committed on 01/05/2015 at 12:36.
Pushed by vrusu into branch 'frameworks'.

Adjusting for co-installability with old kwalletmanager

This would install kwalletmanager5 without conflicting with KDE4's
kwalletmanager files.

One problem still exists, as the Help Contents command won't find the
handbook. However, the old manual should be open if present. Pushing this for
testing purposes.

M  +1    -1    doc/CMakeLists.txt
M  +39   -39   doc/index.docbook
M  +1    -1    kwalletmanager5-kwalletd.desktop
M  +9    -9    src/konfigurator/CMakeLists.txt
M  +1    -1    src/konfigurator/konfigurator.cpp
M  +1    -1    src/konfigurator/kwallet.actions
R  +3    -3    src/konfigurator/kwalletconfig5.desktop [from: src/konfigurator/kwalletconfig.desktop - 098% similarity]
R  +0    -0    src/konfigurator/kwalletmanager5_show.desktop [from: src/konfigurator/kwalletmanager_show.desktop - 100% similarity]
M  +1    -1    src/konfigurator/savehelper.cpp
M  +1    -1    src/manager/kwalletmanager.cpp

http://commits.kde.org/kwallet/bd78050904ce91f134b1f0bde93ed9512613e15f