Adjusting for co-installability with old kwalletmanager

BUG:346951

This would install kwalletmanager5 without conflicting with KDE4's
kwalletmanager files.

One problem still exists, as the Help Contents command won't find the
handbook. However, the old manual should be open if present. Pushing this for
testing purposes.